# Pool-Optimization

./: .gitignore  .gitmodules  CMakeLists.txt  Optimizations.md  README.md  flops.py  original.py  plot.ipynb  plot.py  print.py  pyproject.toml
__pycache__/: original._collide_balls-61.py312.1.nbc  original._collide_balls-61.py312.nbi
benchmark/: CMakeLists.txt  README.md  benchmark.c  plot_results.py
include/: math_helper.h  pool.h  pool_spmd.h  profiling.h  profiling_spmd.h  tsc_x86.h
pooltool/: pyproject.toml
pooltool/pooltool/physics/resolve/: models.py  resolver.py
pooltool/pooltool/physics/resolve/ball_ball/: __init__.py
pooltool/pooltool/physics/resolve/ball_ball/frictional_asl/: __init__.py
result/initial measurements/: Graph results.xlsx  results_03.csv  results_03_native.csv  results_03_native_fast.csv  results_O0.csv
roofline/: stream.c
src/: flops.c  flops_spmd.c  main.c  math_helper.c  pool.c  pool_spmd.c  profiling.c  profiling_multiple_n.c  profiling_multiple_n_spmd.c  profiling_order_test.c  profiling_spmd.c  single_performance.c  single_performance_spmd.c
tests/: test_pool.c
